objects/ESC_EPx_Survey_Delay_Times__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Adding records to this object will allow the user to specify the delay time before the automated survey is sent  based of the case record type, EPs Type and EPs category</description>
    <fields>
        <fullName>Delay_in_Minutes__c</fullName>
        <description>Defines how many minutes before the automated case closure email survey is sent to the customer</description>
        <label>Delay in Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EPx_Category__c</fullName>
        <label>EPx Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EPx_Type__c</fullName>
        <label>EPx Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordType__c</fullName>
        <label>RecordType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ESC_EPx_Survey_Delay_Times</label>
</CustomObject>